# effectful

./: Cargo.toml  README.md
crates/generator/: Cargo.toml
crates/generator/src/: ecma.rs  html.rs  lib.rs
crates/generator/src/ecma/: mod.rs  writer.rs
crates/generator/src/machination/: gen_fns.rs  mod.rs
crates/hugs/: Cargo.toml  README.md
crates/hugs/src/: hir.rs  lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/parser/tests/: empty_html.ast  empty_html.rs  empty_main.ast  empty_main.rs  hello_world.ast  hello_world.rs  many_strings.ast  many_strings.rs  simple_effect.ast  simple_effect.rs
crates/parser/tests/setup/: mod.rs
src/: lib.rs  main.rs
tests/: mod.rs
tests/generate/: console.html  console.rs  hello_world.html  hello_world.rs  mod.rs
tests/setup/: mod.rs
