[package]
name = "effectful"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = ["crates/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generator = { path = "./crates/generator" }
parser = { path = "./crates/parser" }

[dev-dependencies]
pretty_assertions = "1.3.0"
